# terplounge

./: README.md
client/: choose.html  fr.html  practise.html  test-compare-2.html  test-compare.html  test.html  transcribe.html
client/css/: main.css
client/js/: choose.js  practise.js  websocket.js
scripts/: send-raw.bash
server/: Cargo.toml  variables.el
server/src/: api.rs  compare.rs  dotfiles.rs  main.rs  metadata.rs  queue.rs  session.rs  translate.rs
server/templates/: compare.html  index.html  practice.html
