[package]
name = "terplounge"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama-filters = { version = "0.1.3", features = [ "date" ] }
bytes = "1.5.0"
chrono = { version = "*", features = [ "serde" ] }
crossbeam-channel = "0.5.10"
dotenv = "0.15.0"
env_logger = "*"
futures-util = "0.3.28"
hound = "3.5.1"
lazy_static = "*"
log = "*"
mime_guess = "2.0.4"
num_cpus = "1.16.0"
rayon = "1.8.0"
reqwest = { version = "0.11.23", features = [ "blocking", "json"] }
rubato = "0.14.1"
rust-embed="6.8.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.4.0"
thread-priority = "0.15.1"
tokio = { version = "1.35.1", features = ["macros", "sync", "rt-multi-thread"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
warp = "0.3"
warp-embed = "0.4.0"
warp-range = "2.0.0"
whisper-rs = "0.8.0"
